# meta-hybrid_mount

./: Cargo.toml  build.rs  changelog.md  update.json
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  i18n.yml  release.yml
.jules/: journal.md
module/: config.toml  customize.sh  module.prop
src/: Cargo.toml  defs.rs  main.rs  scanner.rs  try_umount.rs  utils.rs
src/conf/: cli_handlers.rs  config.rs
src/core/: executor.rs  granary.rs  manager.rs  mod.rs  modules.rs  planner.rs  state.rs  storage.rs  sync.rs  winnow.rs
src/core/inventory/: model.rs  scanner.rs
src/core/ops/: backup.rs  planner.rs  sync.rs
src/magic_mount/: mod.rs  node.rs  try_umount.rs
src/mount/: magic.rs  mod.rs  node.rs  overlay.rs  try_umount.rs
src/mount/magic_mount/: mod.rs
src/mount/overlayfs/: mod.rs  overlayfs.rs  utils.rs
src/sys/: mod.rs
src/utils/: log.rs
src/utils/fs/: file.rs  xattr.rs
tools/notify/src/: main.rs
update/: changelog.md
webui/: pnpm-lock.yaml
webui/src/: App.svelte  app.css  init.ts
webui/src/components/: NavBar.svelte  Toast.svelte
webui/src/lib/: api.js  api.mock.ts  api.ts  constants.ts  store.svelte.js  store.ts  theme.ts  types.ts
webui/src/locales/: en.json  es.json  ja.json  ru.json  zhs.json  zht.json
webui/src/routes/: ConfigTab.svelte  GranaryTab.css  GranaryTab.svelte  LogsTab.css  LogsTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.svelte  WinnowingTab.css  WinnowingTab.svelte
xbuild/: Cargo.toml
xbuild/src/: main.rs
xtask/src/: main.rs
