[workspace]
members = ["xbuild"]

[package]
name = "magic_mount_rs"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
env_logger = "0.11.8"
chrono = "0.4.42"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[target.aarch64-linux-android.dependencies]
android_logger = "0.15.1"
